@@ -223,6 +223,9 @@ Trunk (unreleased changes)
     value of webinterface.private.actions. 
     (Vinod Kumar Vavilapalli via yhemanth)
 
+    HADOOP-5581. HDFS should throw FileNotFoundException when while opening
+    a file that does not exist. (Brian Bockelman via rangadi)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
